--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "session.socket.io": "*",
     "browserify": "*",
     "underscore": "*"
+  },
+  "devDependencies": {
+    "jasmine-node": "*"
   }
 }
