--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mongoose": "*"
   },
   "devDependencies": {
-    "jasmine-node": "*"
+    "jasmine-node": "*",
+    "shelljs": "*"
   },
   "engines" : { "node" : ">=0.8.1" } 
 }
