adding avatars selection on first join to the game

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "session.socket.io": "*",
     "browserify": "*",
     "underscore": "*",
-    "mongoose": "*"
+    "mongoose": "*",
+    "require-jade": "*"
   },
   "devDependencies": {
     "jasmine-node": "*",
